fix user author failed

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -1,4 +1,4 @@
-script-security 2
+script-security 3
 port 1194
 proto tcp 
 dev tun
@@ -6,6 +6,9 @@ ca easy-rsa/keys/ca.crt
 cert easy-rsa/keys/server.crt
 key easy-rsa/keys/server.key
 dh easy-rsa/keys/dh2048.pem
+auth-user-pass-verify /etc/ovpn/checkpsw.sh via-env
+username-as-common-name
+client-cert-not-required
 push "redirect-gateway def1 bypass-dhcp bypass-dns"
 push "dhcp-option DNS 8.8.8.8"
 push "dhcp-option DNS 8.8.4.4"
