--- a/conf/server.conf
+++ b/conf/server.conf
@@ -14,8 +14,13 @@ push "dhcp-option DNS 8.8.8.8"
 push "dhcp-option DNS 8.8.4.4"
 push "route 10.0.0.0 255.255.255.0"
 server 10.8.0.0 255.255.255.0
+tls-auth easy-rsa/keys/ta.key
 ifconfig-pool-persist ipp.txt
+duplicate-cn
+max-clients 100
 keepalive 10 120
+user nobody
+group nobody
 comp-lzo
 persist-key
 persist-tun
