fix nat not connect network

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -9,7 +9,7 @@ dh easy-rsa/keys/dh2048.pem
 auth-user-pass-verify /etc/ovpn/checkpsw.sh via-env
 username-as-common-name
 client-cert-not-required
-push "redirect-gateway def1 bypass-dhcp bypass-dns"
+push "redirect-gateway def1 bypass-dhcp"
 push "dhcp-option DNS 8.8.8.8"
 push "dhcp-option DNS 8.8.4.4"
 push "route 10.0.0.0 255.255.255.0"
