--- a/conf/server.conf
+++ b/conf/server.conf
@@ -2,10 +2,10 @@ script-security 3
 port replace_port 
 proto tcp 
 dev tun
-ca easy-rsa/keys/ca.crt
-cert easy-rsa/keys/server.crt
-key easy-rsa/keys/server.key
-dh easy-rsa/keys/dh2048.pem
+ca easyrsa/pki/ca.crt
+cert easyrsa/pki/issued/server.crt
+key easyrsa/pki/private/server.key
+dh easyrsa/pki/dh.pem
 auth-user-pass-verify /etc/ovpn/checkpsw.sh via-env
 username-as-common-name
 client-cert-not-required
@@ -14,7 +14,7 @@ push "dhcp-option DNS 8.8.8.8"
 push "dhcp-option DNS 8.8.4.4"
 push "route 10.0.0.0 255.255.255.0"
 server 10.8.0.0 255.255.255.0
-tls-auth easy-rsa/keys/ta.key
+tls-auth easyrsa/pki/ta.key
 ifconfig-pool-persist ipp.txt
 duplicate-cn
 max-clients 100
